--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -1,33 +1,204 @@
 <form class="{{cssClass}} {{actor.type}} flexcol" autocomplete="off">
 
-  {{!-- Sheet Header --}}
+  {{!-- En-tête de la fiche --}}
   <header class="sheet-header">
     <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
-      {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
-      use both the "grid" and "grid-Ncol" class where "N" can be any number
-      from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
+      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="{{localize 'Name'}}"/></h1>
+      
+      {{!-- Points d'XP --}}
+      <div class="resource flex-group-center">
+        <label class="resource-label">{{localize "MYRIAD_SYSTEM.Acquisition.xpCost"}}</label>
+        <div class="resource-content flexrow flex-center flex-between">
+          <input type="text" name="system.xp.value" value="{{system.xp.value}}" data-dtype="Number"/>
+          <span class="sep">/</span>
+          <span class="earned">{{system.xp.earned}}</span>
+        </div>
+      </div>
 
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
-        <div class="resource flex-group-center">
-          <label for="system.health.value" class="resource-label">Health</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.health.value" value="{{system.health.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.health.max" value="{{system.health.max}}" data-dtype="Number"/>
+      {{!-- Points de Magie --}}
+      <div class="resource flex-group-center">
+        <label class="resource-label">{{localize "MYRIAD_SYSTEM.Usage.costTypes.magic"}}</label>
+        <div class="resource-content flexrow flex-center flex-between">
+          <input type="text" name="system.magic.points.value" value="{{system.magic.points.value}}" data-dtype="Number"/>
+          <span class="sep">/</span>
+          <input type="text" name="system.magic.points.max" value="{{system.magic.points.max}}" data-dtype="Number"/>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  {{!-- Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="characteristics">{{localize "MYRIAD_SYSTEM.SheetLabels.Characteristics"}}</a>
+    <a class="item" data-tab="features">{{localize "MYRIAD_SYSTEM.SheetLabels.Features"}}</a>
+    <a class="item" data-tab="magic">{{localize "MYRIAD_SYSTEM.SheetLabels.Magic"}}</a>
+    <a class="item" data-tab="inventory">{{localize "MYRIAD_SYSTEM.SheetLabels.Inventory"}}</a>
+    <a class="item" data-tab="biography">{{localize "Biography"}}</a>
+  </nav>
+
+  {{!-- Contenu des onglets --}}
+  <section class="sheet-body">
+    {{!-- Caractéristiques --}}
+    <div class="tab characteristics" data-group="primary" data-tab="characteristics">
+      <div class="grid grid-2col">
+        {{#each system.characteristics as |characteristic key|}}
+        <div class="characteristic flex-group-center">
+          <label class="characteristic-label">{{localize (concat "MYRIAD_SYSTEM.Characteristic." key)}}</label>
+          <div class="characteristic-content">
+            <input type="text" name="system.characteristics.{{key}}.value" value="{{characteristic.value}}" data-dtype="Number"/>
+            <div class="characteristic-max">
+              <span>/</span>
+              <span>{{characteristic.max}}</span>
+            </div>
           </div>
         </div>
+        {{/each}}
+      </div>
+      
+      {{!-- Liste des Compétences --}}
+      <div class="competences">
+        <header class="items-header flexrow">
+          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.competence"}}</h3>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Competence" data-type="competence"><i class="fas fa-plus"></i></a>
+          </div>
+        </header>
+        <ol class="items-list">
+          {{#each competences as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            <div class="item-name">
+              <div class="item-image">
+                <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+              </div>
+              <h4>{{item.name}}</h4>
+            </div>
+            <div class="item-level">
+              {{#times item.system.level.max}}
+                <i class="fas {{#if (lte this item.system.level.value)}}fa-circle{{else}}fa-circle-o{{/if}}"></i>
+              {{/times}}
+            </div>
+            <div class="item-controls">
+              <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+              <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            </div>
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+    </div>
 
-        <div class="resource flex-group-center">
-          <label for="system.power.value" class="resource-label">Power</label>
-          <div class="resource-content flexrow flex-center flex-between">
-          <input type="text" name="system.power.value" value="{{system.power.value}}" data-dtype="Number"/>
-          <span> / </span>
-          <input type="text" name="system.power.max" value="{{system.power.max}}" data-dtype="Number"/>
+    {{!-- Capacités --}}
+    <div class="tab features" data-group="primary" data-tab="features">
+      {{!-- Voie --}}
+      <div class="voie">
+        <header class="items-header flexrow">
+          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.voie"}}</h3>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Voie" data-type="voie"><i class="fas fa-plus"></i></a>
+          </div>
+        </header>
+        <ol class="items-list">
+          {{#each voies as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            {{> "systems/myriad-system/templates/actor/parts/actor-features.hbs"}}
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+
+      {{!-- Autres Capacités --}}
+      <div class="features">
+        <header class="items-header flexrow">
+          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.feature"}}</h3>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Feature" data-type="feature"><i class="fas fa-plus"></i></a>
+          </div>
+        </header>
+        <ol class="items-list">
+          {{#each features as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            {{> "systems/myriad-system/templates/actor/parts/actor-features.hbs"}}
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+    </div>
+
+    {{!-- Magie --}}
+    <div class="tab magic" data-group="primary" data-tab="magic">
+      {{!-- Arts --}}
+      <div class="arts">
+        <header class="items-header flexrow">
+          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.art"}}</h3>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Art" data-type="art"><i class="fas fa-plus"></i></a>
+          </div>
+        </header>
+        <ol class="items-list">
+          {{#each arts as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            {{> "systems/myriad-system/templates/actor/parts/actor-features.hbs"}}
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+
+      {{!-- Domaines --}}
+      <div class="domains">
+        <header class="items-header flexrow">
+          <h3 class="item-name">{{localize "MYRIAD_SYSTEM.ItemType.domain"}}</h3>
+          <div class="item-controls">
+            <a class="item-control item-create" title="Create Domain" data-type="domain"><i class="fas fa-plus"></i></a>
+          </div>
+        </header>
+        <ol class="items-list">
+          {{#each domains as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            {{> "systems/myriad-system/templates/actor/parts/actor-features.hbs"}}
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+
+      {{!-- Sorts --}}
+      {{> "systems/myriad-system/templates/actor/parts/actor-spells.hbs"}}
+    </div>
+
+    {{!-- Inventaire --}}
+    <div class="tab inventory" data-group="primary" data-tab="inventory">
+      <div class="inventory-grid">
+        {{#each system.inventory.grid as |row y|}}
+        <div class="inventory-row">
+          {{#each row as |cell x|}}
+          <div class="inventory-cell" data-x="{{x}}" data-y="{{y}}" {{#if cell.item}}data-item-id="{{cell.item}}"{{/if}}>
+            {{#if cell.item}}
+            <img src="{{cell.img}}" title="{{cell.name}}"/>
+            {{/if}}
+          </div>
+          {{/each}}
+        </div>
+        {{/each}}
+      </div>
+      {{!-- Liste d'objets en vrac --}}
+      <div class="overflow-items">
+        <h3>{{localize "Overflow Items"}}</h3>
+        <ol class="items-list">
+          {{#each overflowItems as |item id|}}
+          <li class="item flexrow" data-item-id="{{item._id}}">
+            {{> "systems/myriad-system/templates/actor/parts/actor-items.hbs"}}
+          </li>
+          {{/each}}
+        </ol>
+      </div>
+    </div>
+
+    {{!-- Biographie --}}
+    <div class="tab biography" data-group="primary" data-tab="biography">
+      {{editor biographyHTML target="system.biography" button=true owner=owner editable=editable}}
+    </div>
+  </section>
+</form>
           </div>
         </div>
 
