--- a/templates/actor/parts/actor-features.hbs
+++ b/templates/actor/parts/actor-features.hbs
@@ -1,33 +1,94 @@
-<ol class='items-list'>
-  <li class='item flexrow items-header'>
-    <div class='item-name'>{{localize 'Name'}}</div>
-    <div class='item-controls'>
-      <a
-        class='item-control item-create'
-        title='Create item'
-        data-type='feature'
-      >
-        <i class='fas fa-plus'></i>
-        {{localize 'DOCUMENT.New' type='feature'}}
-      </a>
-    </div>
-  </li>
-  {{#each features as |item id|}}
-    <li class='item flexrow' data-item-id='{{item._id}}'>
-      <div class='item-name'>
-        <div class='item-image'>
-          <a class='rollable' data-roll-type='item'>
-            <img
-              src='{{item.img}}'
-              title='{{item.name}}'
-              width='24'
-              height='24'
-            />
-          </a>
-        </div>
-        <h4>{{item.name}}</h4>
-      </div>
-      <div class='item-controls'>
+{{!-- Template utilisé pour les capacités, voies, arts et domaines --}}
+<div class="item-header flexrow">
+  <div class="item-image">
+    <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+  </div>
+  <h4 class="item-name">{{item.name}}</h4>
+  
+  {{#if item.system.tags}}
+  <div class="item-tags">
+    {{#each item.system.tags}}
+    <span class="tag">{{this}}</span>
+    {{/each}}
+  </div>
+  {{/if}}
+
+  <div class="item-controls">
+    <a class="item-control item-toggle" title="{{#if expanded}}{{localize 'Collapse'}}{{else}}{{localize 'Expand'}}{{/if}}">
+      <i class="fas {{#if expanded}}fa-chevron-up{{else}}fa-chevron-down{{/if}}"></i>
+    </a>
+    <a class="item-control item-edit" title="{{localize 'Edit'}}"><i class="fas fa-edit"></i></a>
+    <a class="item-control item-delete" title="{{localize 'Delete'}}"><i class="fas fa-trash"></i></a>
+  </div>
+</div>
+
+{{#if item.system.acquisition}}
+<div class="item-costs flexrow">
+  {{#if item.system.acquisition.xpCost}}
+  <span class="cost">
+    <i class="fas fa-brain"></i>
+    {{item.system.acquisition.xpCost}} {{localize "MYRIAD_SYSTEM.Acquisition.xpCost"}}
+  </span>
+  {{/if}}
+  
+  {{#if item.system.acquisition.price.value}}
+  <span class="cost">
+    <i class="fas fa-coins"></i>
+    {{item.system.acquisition.price.value}} {{localize (concat "MYRIAD_SYSTEM.Acquisition.currencies." item.system.acquisition.price.currency)}}
+  </span>
+  {{/if}}
+</div>
+{{/if}}
+
+{{#if expanded}}
+<div class="item-description">
+  {{{item.system.description}}}
+  
+  {{#if item.system.benefits}}
+  <div class="item-benefits">
+    <h4>{{localize "Benefits"}}</h4>
+    <ul>
+    {{#each item.system.benefits}}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
+  </div>
+  {{/if}}
+
+  {{#if item.system.drawbacks}}
+  <div class="item-drawbacks">
+    <h4>{{localize "Drawbacks"}}</h4>
+    <ul>
+    {{#each item.system.drawbacks}}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
+  </div>
+  {{/if}}
+
+  {{#if item.system.constraints}}
+  <div class="item-constraints">
+    <h4>{{localize "Constraints"}}</h4>
+    <ul>
+    {{#each item.system.constraints}}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
+  </div>
+  {{/if}}
+
+  {{#if item.system.prerequisites}}
+  <div class="item-prerequisites">
+    <h4>{{localize "MYRIAD_SYSTEM.Acquisition.prerequisites"}}</h4>
+    <ul>
+    {{#each item.system.acquisition.prerequisites}}
+      <li>{{this}}</li>
+    {{/each}}
+    </ul>
+  </div>
+  {{/if}}
+</div>
+{{/if}}
         <a
           class='item-control item-edit'
           title='{{localize "DOCUMENT.Edit" type='feature'}}'
