--- a/templates/actor/parts/actor-spells.hbs
+++ b/templates/actor/parts/actor-spells.hbs
@@ -1,33 +1,79 @@
-<ol class='items-list'>
-  {{#each spells as |spells spellLevel|}}
-    <li class='item flexrow items-header'>
-      <div class='item-name'>
-        {{localize 'MYRIAD_SYSTEM.Item.Spell.SpellLVL' level=spellLevel}}
-      </div>
-      <div class='item-controls'>
-        <a
-          class='item-control item-create'
-          title='{{localize "DOCUMENT.Create" type='Spell'}}'
-          data-type='spell'
-          data-spell-level='{{spellLevel}}'
-        >
-          <i class='fas fa-plus'></i>
-          {{localize 'MYRIAD_SYSTEM.Item.Spell.AddLVL' level=spellLevel}}
-        </a>
-      </div>
-    </li>
-    {{#each spells as |item id|}}
-      <li class='item flexrow' data-item-id='{{item._id}}'>
-        <div class='item-name flexrow'>
-          <div class='item-image'>
-            <a class='rollable' data-roll-type='item'><img
-                src='{{item.img}}'
-                title='{{item.name}}'
-                width='24'
-                height='24'
-              /></a>
+{{!-- Liste des sorts --}}
+<div class="spells">
+  <header class="items-header flexrow">
+    <h3>{{localize "MYRIAD_SYSTEM.SheetLabels.Spells"}}</h3>
+    <div class="item-controls">
+      <a class="item-control item-create" title="{{localize 'Create Spell'}}" data-type="spell">
+        <i class="fas fa-plus"></i>
+      </a>
+    </div>
+  </header>
+
+  {{!-- Grouper les sorts par grade --}}
+  {{#each spellsByGrade as |spells grade|}}
+  <div class="spell-grade">
+    <h4>{{localize "Grade"}} {{grade}}</h4>
+    <ol class="items-list">
+      {{#each spells as |spell|}}
+      <li class="item flexrow" data-item-id="{{spell._id}}">
+        <div class="item-header flexrow">
+          <div class="item-image">
+            <img src="{{spell.img}}" title="{{spell.name}}" width="24" height="24"/>
           </div>
-          <h4>{{item.name}}</h4>
+          <h4 class="item-name">{{spell.name}}</h4>
+
+          {{#if spell.system.tags}}
+          <div class="item-tags">
+            {{#each spell.system.tags}}
+            <span class="tag">{{this}}</span>
+            {{/each}}
+          </div>
+          {{/if}}
+
+          <div class="spell-cost">
+            {{#with spell.system.usage.cost}}
+            <span class="cost">
+              {{value}} {{localize (concat "MYRIAD_SYSTEM.Usage.costTypes." type)}}
+            </span>
+            {{/with}}
+          </div>
+
+          <div class="spell-frequency">
+            <i class="fas fa-clock"></i>
+            {{localize (concat "MYRIAD_SYSTEM.Usage.frequency." spell.system.usage.frequency)}}
+          </div>
+
+          <div class="item-controls">
+            <a class="item-control item-toggle" title="{{#if expanded}}{{localize 'Collapse'}}{{else}}{{localize 'Expand'}}{{/if}}">
+              <i class="fas {{#if expanded}}fa-chevron-up{{else}}fa-chevron-down{{/if}}"></i>
+            </a>
+            <a class="item-control item-edit" title="{{localize 'Edit'}}"><i class="fas fa-edit"></i></a>
+            <a class="item-control item-delete" title="{{localize 'Delete'}}"><i class="fas fa-trash"></i></a>
+          </div>
+        </div>
+
+        {{#if expanded}}
+        <div class="item-description">
+          {{{spell.system.description}}}
+
+          {{#if spell.system.usage.conditions}}
+          <div class="spell-conditions">
+            <h4>{{localize "MYRIAD_SYSTEM.Usage.conditions"}}</h4>
+            <ul>
+            {{#each spell.system.usage.conditions}}
+              <li>{{this}}</li>
+            {{/each}}
+            </ul>
+          </div>
+          {{/if}}
+        </div>
+        {{/if}}
+      </li>
+      {{/each}}
+    </ol>
+  </div>
+  {{/each}}
+</div>
         </div>
         <div class='item-controls'>
           <a
