--- a/src/scss/myriad-system.scss
+++ b/src/scss/myriad-system.scss
@@ -17,6 +17,8 @@
 @import 'components/items';
 @import 'components/effects';
 @import 'components/resource';
+@import 'components/characteristics';
+@import 'components/modifiers';
 
 /* Styles spécifiques au système Myriad */
 .myriad-system.sheet.actor {
@@ -24,29 +26,35 @@
   min-height: 420px;
 
   .sheet-header {
-    flex: 0 0 120px;
-    overflow: hidden;
+    flex: 0 0 auto; // Changed from fixed height to auto
+    overflow: visible; // Changed from hidden to visible
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
     .profile-img {
       flex: 0 0 100px;
       height: 100px;
       margin-right: 10px;
+      border-radius: 5px;
+      border: 1px solid #ddd;
     }
 
     .header-fields {
       flex: 1;
-      height: 100px;
+      min-height: 120px;
+      display: flex;
+      flex-direction: column;
     }
 
     .charname {
-      height: 50px;
+      height: auto;
       padding: 0px;
-      margin: 5px 0;
+      margin: 0 0 5px 0;
       
       input {
         width: 100%;
